src/styles/fvtt-player-achievements.scss
.achievements-sheet {
  width:100%;
  height:100%;
  padding: 0 10px 10px 10px;
  max-height:600px;

  .achievements-sheet__dm-controls {
    display: flex;
    flex-direction: row;
    flex-wrap:nowrap;
    margin-bottom: 5px;
  }

  .achievements-sheet__player-controls {
    display:flex;
    flex-direction:row;
    flex-wrap:nowrap;
    justify-content:center;
    align-items: center;
  }
}
.achievements-container {
  display:flex;
  flex-flow: column nowrap;
}

.add-achievement-form {
  display:flex;
  flex-direction:column;
}

.form-error {
  color:red;
}

.fpa-nowrap {
  white-space: nowrap;
}

.fpa-import-container {
  display:flex;
  flex-direction:column;
  flex-wrap:nowrap;

  .fpa-import-data {
    width:100%;
    height:100%;
  }
}

.fpa-export-container {
  display:flex;
  flex-direction:column;
  flex-wrap:nowrap;

  .fpa-export-data {
    width:100%;
    height:100%;
  }
}

.achievement-message {
  h2 {
    text-align:center;
  }

  p {
    text-align:center;
  }

  .achievement-message-description {
    text-align:left;
  }

  .achievement-message-container {
    display:flex;
    flex-direction:row;
    flex-wrap:nowrap;

    img {
      margin-right:5px;
      width:64px;
      height:64px;
    }
  }
}

.achievement-block {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;

  background: darkgrey;
  margin-top: 5px;
  margin-bottom:5px;
  border: 1px solid black;
  border-radius: 5px;

  details {
      display: flex;
      align-items: center;
      cursor: pointer;
  }

  summary {
      display: flex;
      align-items: center;

      display {
        color: #333;
        font-weight: bold;
      }
  }

  details[open] summary::before {
    transform: rotate(90deg);
  }

  summary::before {
      content: "▶";
      margin-right: 0.5rem;
  }

  .achievement-block__details {
    position:relative;
  }

  .achievement-block__details-summary {
    padding: 5px;
  }

  .achievement-block__details-completedoverlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;
  }

  .achievement-block__content {
    margin-left: 5px;
    display: flex;
    flex-direction:column;
    flex-wrap: nowrap;
    flex: 1 1 auto;

    .achievement-block-title-row {
      display: flex;
      flex-direction:row;
      flex-wrap: nowrap;
      justify-content: space-between;
      width: 100%;

      .achievement-block__toggle-lock {
        // width: 2rem;
        // height: 2rem;
        height: 28px;
        margin-right: 1px;
        margin-top: 1px;
        background: rgba(0, 0, 0, 0.5);
        box-shadow: 0 0 10px var(--color-shadow-dark);
        border: 1px solid var(--color-border-dark);
        border-radius: 5px;
        cursor: pointer;
        pointer-events: all;
        display: flex;
        color: white;
        align-items: center;
        justify-content: center;
        width: fit-content;
      }
    }

  }

  .achievement-block__header {
    display:flex;
    flex-flow: row nowrap;
  }

  .achievement-block__image-holder {
    max-width: fit-content;
    max-height: fit-content;
    flex: 1 0 auto;
    padding: 5px;
  }

  .achievement-block__image-holder-other-players-area {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;

    p {
      margin:0;
    }

    // .owned {
    //   display:flex;
    //   flex-flow: row nowrap;
    //   justify-content: center;
    //   align-items: center;
    //   margin-bottom:5px;
    //   margin-top:5px;

    //   button {
    //     height: 28px;
    //     background: rgba(0, 0, 0, 0.5);
    //     box-shadow: 0 0 10px var(--color-shadow-dark);
    //     border: 1px solid var(--color-border-dark);
    //     border-radius: 5px;
    //     cursor: pointer;
    //     pointer-events: all;
    //     display: flex;
    //     color: white;
    //     align-items: center;
    //     justify-content: center;
    //     width:fit-content;
    //     margin:5px;
    //   }
    // }


    .owned,.unowned {
      display:flex;
      flex-flow: row wrap;
      margin-bottom:5px;
      margin-top:5px;

      button {
        height: 28px;
        background: rgba(0, 0, 0, 0.5);
        cursor: pointer;
        pointer-events: all;
        color: white;
        margin: 2px;
        justify-content: center;
        overflow: clip;
        text-overflow: ellipsis;
        line-height: 24px;
        width:fit-content;
      }
    }
  }

  .achievement-block__image-unobtained {
    filter: brightness(0.5)
  }

  .achievement-block__image-holder-buttons {
    display:flex;
    flex-direction:column;
    flex-wrap:nowrap;
  }

  .achievement-block__image-holder-award-buttons-area {
    display:flex;
    flex-basis:content;
    flex-direction:row;
    flex-wrap:nowrap;
    justify-content: center;

    p {
      margin:0;
    }

    .pcolumn {
      display:flex;
      flex-flow:column nowrap;
      width: 100%;
      padding: 5px;
    }

    .pcolumn:nth-child(2) {
      border-left: 1px black solid;
      margin-left: 5px;
      margin-right: 5px;
    }

    .owned,.unowned {
      display:flex;
      flex-flow: column nowrap;
      margin-bottom:5px;
      margin-top:5px;

      button {
        height: 28px;
        background: rgba(0, 0, 0, 0.5);
        cursor: pointer;
        pointer-events: all;
        color: white;
        margin: 2px;
        justify-content: center;
        overflow: clip;
        text-overflow: ellipsis;
        line-height: 24px;
      }
    }
  }

  .achievement-block__title {
    border-bottom: 1px solid black;
    align-content: center;
    display: flex;
    justify-content: center;
    justify-self: center;
    align-content: center;
    align-items: center;
    align-self: center;
    font-size: 1.25em;
  }

  .achievement-block__title-lock {
    border-bottom: none;
    align-content: center;
    display: flex;
    justify-content: center;
    justify-self: center;
    align-content: center;
    align-items: center;
    align-self: center;
    font-size: 1.25em;
  }

  .achievement-block__title-buttons {
    display:flex;
    flex-flow:row-reverse;
    flex-wrap:nowrap;
  }

  .achievements-sheet__hide-details {
    margin-left: 0px;
    margin-right: 5px;
    margin-top: 3px;
    margin-bottom: 3px;
  }

  .achievement-block__image-holder-button {
    height: 28px;
    width: 28px;
    margin-top: 0.25rem;
    margin-left: 0.05rem;
    margin-right:0.05rem;
    background: rgba(0, 0, 0, 0.5);
    border: 1px solid var(--color-border-dark);
    border-radius: 5px;
    cursor: pointer;
    pointer-events: all;
    display: flex;
    color: white;
    align-items: center;
    justify-content: center;

    &:hover {
      background: rgba(0, 0, 0, 0.75);
    }

  }

  .achievement-block__image-holder-button:first-of-type {
    margin-right:0.25rem;
  }

  // }


}

